--- a/lambda/package.json
+++ b/lambda/package.json
@@ -12,7 +12,8 @@
     "playwright-aws-lambda": "^0.9.0",
     "playwright-core": "^1.40.0",
     "aws-sdk": "^2.1490.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "cron-parser": "^4.9.0"
   },
   "devDependencies": {
     "serverless": "^3.35.2",
