--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,25 +1,44 @@
 {
   "name": "form-testing-lambda",
   "version": "1.0.0",
-  "description": "AWS Lambda function for automated form testing using Playwright",
+  "description": "AWS Lambda functions for automated form testing",
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack",
-    "deploy": "serverless deploy"
+    "lint": "eslint src/",
+    "deploy": "serverless deploy",
+    "deploy:prod": "serverless deploy --stage prod",
+    "remove": "serverless remove",
+    "build": "serverless webpack",
+    "invoke:local": "serverless invoke local",
+    "logs": "serverless logs"
   },
   "dependencies": {
-    "playwright-aws-lambda": "^0.9.0",
-    "playwright-core": "^1.40.0",
-    "aws-sdk": "^2.1490.0",
-    "uuid": "^9.0.1",
-    "cron-parser": "^4.9.0"
+    "@sparticuz/chromium": "^117.0.0",
+    "aws-sdk": "^2.1502.0",
+    "moment": "^2.29.4",
+    "puppeteer-core": "^21.5.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "serverless": "^3.35.2",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@types/aws-lambda": "^8.10.126",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.53.0",
+    "jest": "^29.7.0",
+    "serverless": "^3.38.0",
+    "serverless-prune-plugin": "^2.0.2",
     "serverless-webpack": "^5.13.0",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "jest": "^29.7.0"
+    "webpack-node-externals": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   }
 }
