--- a/lambda/serverless.yml
+++ b/lambda/serverless.yml
@@ -14,6 +14,29 @@ provider:
     TESTS_TABLE: ${self:service}-${self:provider.stage}-tests
     SCHEDULES_TABLE: ${self:service}-${self:provider.stage}-schedules
     NODE_OPTIONS: '--enable-source-maps'
+    ALLOWED_ORIGINS: 'http://localhost:3001,https://your-production-domain.com'
+  httpApi:
+    cors:
+      allowedOrigins: 
+        - http://localhost:3001
+        - https://your-production-domain.com
+      allowedHeaders:
+        - Content-Type
+        - Authorization
+        - X-Api-Key
+        - X-Amz-Security-Token
+        - X-Amz-User-Agent
+      allowedMethods:
+        - GET
+        - POST
+        - PUT
+        - DELETE
+        - PATCH
+        - OPTIONS
+      allowCredentials: true
+      exposedHeaders:
+        - Special-Response-Header
+      maxAge: 86400
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -49,68 +72,58 @@ functions:
   runTest:
     handler: src/handlers/runTest.handler
     events:
-      - http:
+      - httpApi:
           path: /tests
-          method: post
-          cors: true
-    layers:
-      - arn:aws:lambda:${self:provider.region}:764866452798:layer:chrome-aws-lambda:40
+          method: POST
 
   getTestResult:
     handler: src/handlers/getTestResult.handler
     events:
-      - http:
+      - httpApi:
           path: /tests/{testId}
-          method: get
-          cors: true
+          method: GET
 
   listTests:
     handler: src/handlers/listTests.handler
     events:
-      - http:
+      - httpApi:
           path: /tests
-          method: get
-          cors: true
+          method: GET
 
   createSchedule:
     handler: src/handlers/createSchedule.handler
     events:
-      - http:
+      - httpApi:
           path: /schedules
-          method: post
-          cors: true
+          method: POST
 
   updateSchedule:
     handler: src/handlers/updateSchedule.handler
     events:
-      - http:
+      - httpApi:
           path: /schedules/{scheduleId}
-          method: put
-          cors: true
+          method: PUT
 
   deleteSchedule:
     handler: src/handlers/deleteSchedule.handler
     events:
-      - http:
+      - httpApi:
           path: /schedules/{scheduleId}
-          method: delete
-          cors: true
+          method: DELETE
 
   listSchedules:
     handler: src/handlers/listSchedules.handler
     events:
-      - http:
+      - httpApi:
           path: /schedules
-          method: get
-          cors: true
+          method: GET
 
   getAnalytics:
     handler: src/handlers/getAnalytics.handler
     events:
-      - http:
+      - httpApi:
           path: /analytics
-          method: get
-          cors: true
+          method: GET
 
   processScheduledTests:
     handler: src/handlers/processScheduledTests.handler
