--- a/lambda/serverless.yml
+++ b/lambda/serverless.yml
@@ -52,6 +52,8 @@ provider:
       Resource:
         - arn:aws:dynamodb:${self:provider.region}:*:table/${self:service}-${self:provider.stage}-tests
         - arn:aws:dynamodb:${self:provider.region}:*:table/${self:service}-${self:provider.stage}-schedules
+        - arn:aws:dynamodb:${self:provider.region}:*:table/${self:service}-${self:provider.stage}-tests/index/*
+        - arn:aws:dynamodb:${self:provider.region}:*:table/${self:service}-${self:provider.stage}-schedules/index/*
 
 custom:
   resultsBucket: ${self:service}-results-${self:provider.stage}
@@ -148,9 +150,6 @@ resources:
                 KeyType: HASH
             Projection:
               ProjectionType: ALL
-            ProvisionedThroughput:
-              ReadCapacityUnits: 1
-              WriteCapacityUnits: 1
         BillingMode: PAY_PER_REQUEST
 
     SchedulesTable:
@@ -172,10 +171,38 @@ resources:
                 KeyType: HASH
             Projection:
               ProjectionType: ALL
-            ProvisionedThroughput:
-              ReadCapacityUnits: 1
-              WriteCapacityUnits: 1
         BillingMode: PAY_PER_REQUEST
+
+    ResultsBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:custom.resultsBucket}
+        CorsConfiguration:
+          CorsRules:
+            - AllowedHeaders:
+                - '*'
+              AllowedMethods:
+                - GET
+                - PUT
+                - POST
+                - DELETE
+                - HEAD
+              AllowedOrigins:
+                - '*'
+              MaxAge: 3000
+
+    ResultsBucketPolicy:
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        Bucket: !Ref ResultsBucket
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal: '*'
+              Action:
+                - s3:GetObject
+              Resource: !Join ['', ['arn:aws:s3:::', !Ref ResultsBucket, '/*']]
 
 plugins:
   - serverless-webpack
