--- a/lambda/serverless.yml
+++ b/lambda/serverless.yml
@@ -16,7 +16,24 @@ provider:
     NODE_OPTIONS: '--enable-source-maps'
     ALLOWED_ORIGINS: 'http://localhost:3001'
   httpApi:
-    cors: true  # This enables CORS with default settings for local development
+    cors:
+      allowedOrigins:
+        - http://localhost:3001
+      allowedHeaders:
+        - Content-Type
+        - Authorization
+        - X-Api-Key
+        - X-Amz-Security-Token
+        - X-Amz-User-Agent
+      allowedMethods:
+        - GET
+        - POST
+        - PUT
+        - DELETE
+        - PATCH
+        - OPTIONS
+      allowCredentials: true
+      maxAge: 86400
   iamRoleStatements:
     - Effect: Allow
       Action:
